# 42-directed

./: claude.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
components/slice/oss-fuzz-aixcc/infra/base-images/base-clang/analyzer/src/: CMakeLists.txt
components/slice/oss-fuzz-aixcc/infra/base-images/base-clang/analyzer/src/lib/: Annotation.cc  Annotation.h  CallGraph.cc  GlobalCtx.h  KAMain.cc
components/submitter/: tasks.py
notes/: .gitignore  README.md  bandfuzz.md  book.toml  corpus_grabber.md  message-flow-architecture.md  readme.md  sarif.md  seedgen-codexmode.md  seedgen-fullmode.md  seedgen.md
notes/src/: SUMMARY.md  aixcc-game-strategy.md  bandfuzz.md  cminplusplus.md  corpus_grabber.md  db.md  directed-fuzzing-approach.md  directed.md  fuzzing.md  gateway.md  how-seeds-used.md  javaslicer.md  message-flow-architecture.md  patch_agent.md  patchagent-aixcc-vs-paper.md  patchagent-autohint.md  patchagent-counterexample-sampling.md  patchagent-cross-profile-validation.md  patchagent-fast-vs-generic.md  patchagent-prompts.md  patchagent-reproducer.md  patchagent-validation.md  pov-gen-sum.md  prime-build.md  primefuzz.md  questionaire.md  readme.md  refs.bib  sarif.md  scheduler.md  seedgen-codexmode.md  seedgen-fullmode.md  seedgen-mcpmode.md  seedgen-minimode.md  seedgen.md  slice.md  sok-patch-summary.md  submitter.md  triage.md  yufu.md
oss-crs/: crs.yaml  docker-bake.hcl
oss-crs/dockerfiles/: builder.Dockerfile  prepare.Dockerfile  (+2 more)
(+26 files in other folders)
